--- a/index.html
+++ b/index.html
@@ -1,1 +1,130 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Malla Curricular de Psicología</title>
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <h1 class="titulo-principal">Malla Curricular de Psicología</h1>
+        <p class="subtitulo">Haz clic en un ramo para marcarlo como aprobado.</p>
+    </header>
+
+    <main class="malla-curricular">
+        <div class="semestre" data-semestre="1">
+            <h2 class="semestre-titulo">Semestre 1</h2>
+            <ul class="ramos-lista">
+                <li class="ramo">Historia y Fundamentos de la Psicología</li>
+                <li class="ramo">Tópicos de Neurobiología</li>
+                <li class="ramo">Psicología y Sociedad</li>
+                <li class="ramo">Inglés I</li>
+                <li class="ramo">Eje de Formación Interdisciplinaria I</li>
+            </ul>
+        </div>
+
+        <div class="semestre" data-semestre="2">
+            <h2 class="semestre-titulo">Semestre 2</h2>
+            <ul class="ramos-lista">
+                <li class="ramo">Sistema Psicológicos</li>
+                <li class="ramo">Procesos Psicológicos y Neurociencias</li>
+                <li class="ramo">Psicología y Epistemología</li>
+                <li class="ramo">Inglés II</li>
+                <li class="ramo">Habilidades Comunicativas</li>
+            </ul>
+        </div>
+
+        <div class="semestre" data-semestre="3">
+            <h2 class="semestre-titulo">Semestre 3</h2>
+            <ul class="ramos-lista">
+                <li class="ramo">Psicoanálisis I</li>
+                <li class="ramo">Psicología del Desarrollo I</li>
+                <li class="ramo">Investigación I</li>
+                <li class="ramo">Inglés III</li>
+                <li class="ramo">Razonamiento Científico y TICS</li>
+            </ul>
+        </div>
+
+        <div class="semestre" data-semestre="4">
+            <h2 class="semestre-titulo">Semestre 4</h2>
+            <ul class="ramos-lista">
+                <li class="ramo">Psicoanálisis II</li>
+                <li class="ramo">Psicología del Desarrollo II</li>
+                <li class="ramo">Investigación II</li>
+                <li class="ramo">Inglés IV</li>
+                <li class="ramo">Eje de Formación Interdisciplinaria II</li>
+            </ul>
+        </div>
+
+        <div class="semestre" data-semestre="5">
+            <h2 class="semestre-titulo">Semestre 5</h2>
+            <ul class="ramos-lista">
+                <li class="ramo">Psicodiagnóstico Clínico I</li>
+                <li class="ramo">Psicopatología y Psiquiatría I</li>
+                <li class="ramo">Taller de Integración</li>
+                <li class="ramo">Psicología Social</li>
+                <li class="ramo">Eje de Formación Interdisciplinaria III</li>
+            </ul>
+        </div>
+
+        <div class="semestre" data-semestre="6">
+            <h2 class="semestre-titulo">Semestre 6</h2>
+            <ul class="ramos-lista">
+                <li class="ramo">Psicodiagnóstico Clínico II</li>
+                <li class="ramo">Psicopatología y Psiquiatría II</li>
+                <li class="ramo">Psicología Educacional</li>
+                <li class="ramo">Diagnóstico e Intervención Social</li>
+                <li class="ramo">Psicología del Trabajo y las Organizaciones</li>
+            </ul>
+        </div>
+
+        <div class="semestre" data-semestre="7">
+            <h2 class="semestre-titulo">Semestre 7</h2>
+            <ul class="ramos-lista">
+                <li class="ramo">Clínica Sistémica</li>
+                <li class="ramo">Psicopatología Infantojuvenil</li>
+                <li class="ramo">Diagnóstico e Intervención Educacional</li>
+                <li class="ramo">Psicología Jurídica</li>
+                <li class="ramo">Diagnóstico e Intervención Organizacional</li>
+            </ul>
+        </div>
+
+        <div class="semestre" data-semestre="8">
+            <h2 class="semestre-titulo">Semestre 8</h2>
+            <ul class="ramos-lista">
+                <li class="ramo">Clínica Psicoanalítica</li>
+                <li class="ramo">Clínica Infantojuvenil</li>
+                <li class="ramo">Integrador I: Taller de Investigación</li>
+                <li class="ramo">Diagnóstico e Intervención Jurídica</li>
+                <li class="ramo">Intervención Clínica Sistémica</li>
+            </ul>
+        </div>
+
+        <div class="semestre" data-semestre="9">
+            <h2 class="semestre-titulo">Semestre 9</h2>
+            <ul class="ramos-lista">
+                <li class="ramo">Taller de Intervención Clínica</li>
+                <li class="ramo">Psicología y Salud</li>
+                <li class="ramo">Taller de Diagnóstico e Intervención Psicosocial</li>
+                <li class="ramo">Electivo de Formación Profesional I</li>
+                <li class="ramo">Electivo de Formación Profesional II</li>
+            </ul>
+        </div>
+
+        <div class="semestre" data-semestre="10">
+            <h2 class="semestre-titulo">Semestre 10</h2>
+            <ul class="ramos-lista">
+                <li class="ramo">Integrador II: Práctica Profesional</li>
+            </ul>
+        </div>
+
+    </main>
+
+    <script src="script.js"></script>
+</body>
+</html>
 
